# hka-embedded-iot

./: .gitignore  README.md  on_docker_startup.sh  west.yml
.container-env/: Dockerfile  entrypoint.sh  run-bash-in-docker.sh
.devcontainer/: devcontainer.json
app/: CMakeLists.txt  Exercise1.md  Kconfig  prj.conf
app/src/: main.c
app2_nrf52/: CMakeLists.txt  Exercise3.md  Kconfig  prj.conf  thingy91_nrf52840.overlay
app2_nrf52/src/: ble.c  channels.h  comm.c  main.c
app2_nrf91/: CMakeLists.txt  Exercise2.md  Kconfig  prj.conf  thingy91_nrf9160.overlay
app2_nrf91/src/: channels.h  comm.c  env_sensor.c  io.c  main.c
